# PfizerSynthetic

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
configs/: pdc2.yaml  pdc2_overfit_large.yaml  pdc2_overfit_medium.yaml  pdc2_overfit_small.yaml
data/pbc2/: data.csv  data_introduction.md  data_phasesyn.csv  data_types.csv  data_types_phasesyn_piecewise.csv  data_types_v1.csv  data_types_v2a.csv  data_types_v4.csv  data_types_v4_weibull.csv  data_v2a.csv  data_v4.csv  data_v4_control.csv  longitudinal.csv  longitudinal_control.csv  pbc2_config.txt  pbc2_data.csv  pbc2_document.md  pbc2_id.csv  pbc2_label.csv  pbc2_mask.csv  pbc2_stats.json  prepare_pbc2_lvae.py  visualize_lvae_results.py
docs/: tutorial.md
evaluation/: __init__.py  longitudinal_metrics.py  longitudinal_plots.py  overfit_diagnostics.py  survival_plots.py
examples/: simulation_pos_smoke.yaml
experiments/pbc_core4/: __init__.py  config_pbc_core4.yaml  config_pbc_core4_20260617.yaml  config_pbc_core4_revision.yaml  config_pbc_core4_tuned.yaml  estimate_exp1_fraction_performance.py  generate_pdc2_reference_figures_from_tuned.py  load_pbc.py  make_exp1_publication_tables.py  make_paper_result_figures.py  methods.py  metrics.py  plot_exp1_metric_performance.py  plotting.py  preprocess_pbc.py  report.py  report_exp1_pipeline_performance.py  run_all.py  run_benchmarks.py  run_exp1_control_arm.py  run_exp2_matched_controls.py  run_exp3_digital_twin.py  run_exp4_virtual_trial.py  run_phasesyn.py  run_privacy_refresh.py  run_revision.py  run_revision_refresh.py  tune_phasesyn.py  tune_phasesyn_validation.py
experiments/simulation_pos/: Makefile  __init__.py  dgm.py  evaluate_pos.py  generate_phase2.py  io_utils.py  make_figures.py  phasesyn_adapter.py  (+8 more)
scripts/: revise_simulation_benchmarks_20260604.py  run_simulation_experiment_20260604.py  run_simulation_holdout.py  simulate_simple_rct_for_phasesyn.py
src/: README.md
tests/: conftest.py  test_pbc_core4_smoke.py  test_pdc2_baseline_inclusive_longitudinal.py  test_pdc2_cv_tuning.py  test_phasesyn_chronology_inputs.py  test_prior_cohort_generation.py
utils/: data_processing.py  likelihood.py  src.py  statistic.py  theta_estimation.py
(+22 files in other folders)
